--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
 Theme Name:         Magnificient
 Theme URI:          http://infismash.com/demos/wordpress/magnificient
-Description:        Magnifient is a versatile HTML5 responsive WordPress theme based on ZURB's Foundation.
-Version:            1.3.0
+Description:        Magnificient is a versatile HTML5 responsive WordPress theme based on ZURB's Foundation. Magnificient is a WordPress theme which you can use for your personal blogging website or a story website. Magnificient gives you a clean layout with minimal interface.
+Version:            1.3.2
 Author:             Nirmalya Ghosh
 Author URI:         http://infismash.com/
-Tags:               light, one-column, two-columns, right-sidebar, left-sidebar, fluid-layout, custom-menu, featured-images,                                         full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready
-Text Domain:        foundationbuddy
+Tags:               light, one-column, two-columns, right-sidebar, left-sidebar, fluid-layout, custom-menu, featured-images, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready
+Text Domain:        magnificient
 License:            GNU General Public License v3.0
 License URI:        http://www.gnu.org/licenses/gpl-3.0.html
 Copyright:          (c) 2015 Nirmalya Ghosh
