--- a/css/style.css
+++ b/css/style.css
@@ -733,6 +733,9 @@ iframe {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); /* IE 9 */
+  -webkit-transform: translate(-50%, -50%); /* Chrome, Safari, Opera */
+  -moz-transform: translate(-50%, -50%);
 }
 
 .logo-wrap h1 {
