--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,8 @@ body {
   position: relative;
   cursor: default;
   line-height: 1.7em;
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
 }
 
 h1,
@@ -811,6 +813,7 @@ span.muted {
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;  
+  margin-top: 20px;
 }
 
 .index-card p {
