--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name:         Magnificient
-Theme URI:          http://infismash.com/demos/wordpress/magnificient
+Theme URI:          http://www.infismash.com/magnificient-wordpress-theme/
 Description:        Magnificient is a versatile HTML5 responsive WordPress theme based on ZURB's Foundation. Magnificient is a WordPress theme which you can use for your personal blogging website or a story website. Magnificient gives you a clean layout with minimal interface.
 Version:            1.3.3
 Author:             Nirmalya Ghosh
